--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -1,11 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap");
 html,
 body {
   padding: 0;
   margin: 0;
+  background-color: #EEEEEE;
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+ul li {
+  list-style-type: none;
 }
 
 * {
   box-sizing: border-box;
+  font-family: "M PLUS Rounded 1c", sans-serif;
 }
 
 /*# sourceMappingURL=main.css.map */
