--- a/src/styles/scss/ProductsIndex.scss
+++ b/src/styles/scss/ProductsIndex.scss
@@ -1,6 +1,11 @@
+@import './main.scss';
+
+
 .products-index {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
 
 
