--- a/src/styles/css/ProductDetail.css
+++ b/src/styles/css/ProductDetail.css
@@ -1,40 +1,81 @@
+@import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap");
+html,
+body {
+  padding: 0;
+  margin: 0;
+  background-color: #EEEEEE;
+  font-size: 17px;
+}
+
+@media (max-width: 900px) {
+  html {
+    font-size: 15px;
+  }
+}
+@media (max-width: 400px) {
+  html {
+    font-size: 13px;
+  }
+}
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+ul li {
+  list-style-type: none;
+}
+
+* {
+  box-sizing: border-box;
+  font-family: "M PLUS Rounded 1c", sans-serif;
+}
+
 .product-id-view {
+  font-size: 1.5rem;
+}
+.product-id-view .product-detail-container {
   background-color: white;
 }
-.product-id-view .product-detail-content {
+.product-id-view .product-detail-container .product-detail-content {
   display: flex;
   margin-top: 16px;
   width: 100%;
 }
-.product-id-view .product-detail-content .product-detail-img {
+.product-id-view .product-detail-container .product-detail-content .product-detail-img {
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.product-id-view .product-detail-content .product-detail-img img {
-  width: 100%;
+.product-id-view .product-detail-container .product-detail-content .product-detail-img img {
+  width: 140px;
 }
-.product-id-view .product-detail-content .product-detail-header {
+.product-id-view .product-detail-container .product-detail-content .product-detail-header {
   display: flex;
   flex-direction: column;
 }
-.product-id-view .product-detail-content .product-detail-header .product-detail-conditions {
-  font-size: 12px;
+.product-id-view .product-detail-container .product-detail-content .product-detail-header .product-detail-conditions {
+  font-size: 0.7em;
   margin-top: 16px;
   margin-bottom: 16px;
 }
-.product-id-view .product-detail-content .product-detail-header .product-detail-title {
-  margin-bottom: 16px;
-  font-weight: 500;
+.product-id-view .product-detail-container .product-detail-content .product-detail-header .product-detail-conditions span {
+  padding: 0.3em;
 }
-.product-id-view .product-detail-content .product-detail-header .product-detail-amount {
-  font-weight: 500;
+.product-id-view .product-detail-container .product-detail-content .product-detail-header .product-detail-title {
+  margin-bottom: 16px;
+  font-size: 0.8em;
+}
+.product-id-view .product-detail-container .product-detail-content .product-detail-header .product-detail-amount {
   margin-top: 16px;
   margin-bottom: 16px;
-  font-size: 2rem;
+  font-size: 1.8em;
 }
-.product-id-view .product-detail-content .product-detail-header .btn-container {
+.product-id-view .product-detail-container .product-detail-content .product-detail-header .btn-container {
   height: 10vh;
 }
-.product-id-view .product-detail-content .product-detail-header .btn-container .product-purchase {
+.product-id-view .product-detail-container .product-detail-content .product-detail-header .btn-container .product-purchase {
   border: none;
   border-radius: 5px;
   background-color: #3483FA;
@@ -43,8 +84,45 @@
   width: 100%;
   height: 40%;
 }
-.product-id-view .product-description .product-description-title {
-  font-size: 24px;
+.product-id-view .product-detail-container .product-description {
+  font-size: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  margin: 8px;
+}
+.product-id-view .product-detail-container .product-description .product-description-title {
+  font-size: 1em;
+}
+.product-id-view .product-detail-container .product-description .product-description-content {
+  font-size: 0.7em;
+}
+
+@media (min-width: 768px) and (max-width: 1600px) {
+  .product-id-view {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .product-id-view .product-detail-container {
+    width: 72%;
+  }
+  .product-id-view .product-detail-container .product-detail-content .product-detail-img {
+    width: 60%;
+  }
+  .product-id-view .product-detail-container .product-detail-content .product-detail-img img {
+    width: 500px;
+  }
+  .product-id-view .product-detail-container .product-detail-content .product-detail-header {
+    font-size: 1rem;
+  }
+  .product-id-view .product-detail-container .product-detail-content .product-detail-header .btn-container {
+    width: 50%;
+    height: auto;
+  }
+  .product-id-view .product-detail-container .product-detail-content .product-detail-header .btn-container .product-purchase {
+    height: auto;
+  }
 }
 
 /*# sourceMappingURL=ProductDetail.css.map */
