--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -4,8 +4,19 @@ body {
   padding: 0;
   margin: 0;
   background-color: #EEEEEE;
+  font-size: 17px;
 }
 
+@media (max-width: 900px) {
+  html {
+    font-size: 15px;
+  }
+}
+@media (max-width: 400px) {
+  html {
+    font-size: 13px;
+  }
+}
 a {
   text-decoration: none;
   cursor: pointer;
