--- a/src/styles/scss/ProductsList.scss
+++ b/src/styles/scss/ProductsList.scss
@@ -1,30 +1,74 @@
+@import './main.scss';
+
 .product-content {
     display: flex;
     margin-left: 8px;
     margin-right: 8px;
     background-color: white;
     cursor: pointer;
-    border-bottom: #dadada;
+    border-bottom: 1.5px solid #dadada;
 
     .product-img-container {
-        margin-right: 8px;
+        width: 70%;
+        margin: 8px;
+
+        img {
+            width: 100px;
+            border-radius: 4px;
+        }
     }
 
     .product-header {
         margin-right: 8px;
         display: flex;
-        justify-content: end;
+        justify-content: flex-end;
         flex-direction: column;
+        font-size: 1.5rem;
 
         .product-price {
             margin-bottom: 8px;
-            font-size: 1.5rem;
+            font-size: 1.5em;
         }
 
         .product-title {
             margin-top: 8px;
-            font-size: 1em;
+            font-size: 0.7em;
+
         }
 
+    }
+}
+
+
+@media (min-width: 768px) and (max-width: 1600px) {
+    .products-list-container {
+        width: 72%;
+
+        .product-content {
+            font-size: 1rem;
+
+            .product-img-container {
+                width: 20%;
+
+                img {
+                    width: 180px;
+                }
+            }
+        }
+
+        .product-header {
+            display: flex;
+            flex-direction: column;
+            justify-content: start;
+
+            .product-price {
+                font-size: 1em;
+
+            }
+
+            .product-title {
+                font-size: 0.6em;
+            }
+        }
     }
 }
