--- a/src/styles/css/ProductDetail.css
+++ b/src/styles/css/ProductDetail.css
@@ -96,6 +96,16 @@ ul li {
 .product-id-view .product-detail-container .product-description .product-description-content {
   font-size: 0.7em;
 }
+.product-id-view .error {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.product-id-view .error a {
+  color: #3483FA;
+  font-weight: 600;
+}
 
 @media (min-width: 768px) and (max-width: 1600px) {
   .product-id-view {
