--- a/src/styles/css/ProductsIndex.css
+++ b/src/styles/css/ProductsIndex.css
@@ -37,5 +37,15 @@ ul li {
   justify-content: center;
   align-items: center;
 }
+.products-index .error {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.products-index .error a {
+  color: #3483FA;
+  font-weight: 600;
+}
 
 /*# sourceMappingURL=ProductsIndex.css.map */
