--- a/src/styles/scss/ProductDetail.scss
+++ b/src/styles/scss/ProductDetail.scss
@@ -90,6 +90,18 @@
         }
     }
 
+    .error {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        a {
+            color: $button-bg;
+            font-weight: 600;
+        }
+    }
+
 
 
 }
