--- a/src/styles/scss/ProductsIndex.scss
+++ b/src/styles/scss/ProductsIndex.scss
@@ -8,5 +8,18 @@
     align-items: center;
 
 
+    .error {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        a {
+            color: $button-bg;
+            font-weight: 600;
+        }
+    }
+
+
 
 }
